# swiss-treasury-cockpit

./: .gitignore  CLAUDE.md  README.md  cockpit_bundle.txt  generate_bundles.py  generate_pnl_prod_bundle.py  pnl_engine_bundle.txt  pnl_prod_bundle.txt  prompt save.md  pyproject.toml
.claude/: settings.local.json
config/: cockpit.config.yaml
docs/: architecture.md  cli.md  coc-decomposition.md  configuration.md  data-ingestion.md  data-models.md  index.md  installation.md  llm-agents.md  matrices-curves.md  pnl-engine.md  portfolio-snapshot.md  regulatory-reference.md  rendering.md  scoring-alerts.md  testing.md
prompts/: quant-audit.md
scripts/: demo_pnl_report.py  gen_data_dictionary.py  wasp_preflight.py
src/pnl_engine/: __init__.py  basis_risk.py  config.py  curves.py  dynamic_balance_sheet.py  engine.py  eve.py  hedge_optimizer.py  locked_in_nii.py  matrices.py  models.py  nmd.py  nmd_backtest.py  orchestrator.py  prepayment.py  pyproject.toml  replication.py  repricing.py  reverse_stress.py  saron.py  scenarios.py  sensitivity_explain.py  snb_reserves.py  strategy_consolidated.py  wasptools.py  what_if.py
tasks/: lessons.md  todo.md
tests/: conftest.py  test_agents.py  test_alerts.py  test_bank_native_load.py  test_calendar.py  test_charts.py  test_cli.py  test_config.py  test_config_loader.py  test_custom_scenarios.py  test_data_manager.py  test_data_quality.py  test_dynamic_balance_sheet.py  test_eve.py  test_excel_export.py  test_integration.py  test_kpi_store.py  test_nmd.py  test_notion_export.py  test_pdf_export.py  test_peer_benchmark.py  (+14 more)
(+177 files in other folders)
